--- a/MediaPlayer/mainwindow.ui
+++ b/MediaPlayer/mainwindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>664</width>
-    <height>472</height>
+    <width>1035</width>
+    <height>664</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -17,50 +23,59 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>10</y>
-      <width>621</width>
-      <height>361</height>
+      <x>30</x>
+      <y>40</y>
+      <width>971</width>
+      <height>531</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QVideoWidget" name="View" native="true"/>
+      <widget class="QVideoWidget" name="widget" native="true"/>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <layout class="QHBoxLayout" name="horizontalLayout_7">
        <item>
-        <widget class="QPushButton" name="PlayPushButton">
+        <widget class="QPushButton" name="CamPushButton">
          <property name="text">
-          <string>Play/Pause</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="WebCamPushButton">
-         <property name="text">
-          <string>WebCam</string>
+          <string/>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="StopPushButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
-          <string>Stop</string>
+          <string/>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="RewindPushButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
-          <string>Rewind</string>
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="PlayPausePushButton">
+         <property name="text">
+          <string/>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="ForwardPushButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
-          <string>Forward</string>
+          <string/>
          </property>
         </widget>
        </item>
@@ -74,7 +89,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>664</width>
+     <width>1035</width>
      <height>22</height>
     </rect>
    </property>
